Correctly enable wrap, overflow

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -143,6 +143,7 @@ leaflet-map {
 }
 
 .tweet {
+  overflow: hidden;
 
   a {
 
